[package]
name = "rust-orchestrator"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_derive = { version = "1.0.228" }
csv = { version = "1.4.0" }
futures = { version = "0.3.31" }
